2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Use a dynamic buffer for usernames.
	* src/login.c: Copy the name of the user authenticated by PAM to
	username. This simplify later logging (avoid USE_PAM
	conditional).
	* src/login.c: Check that no username is specified with -r.
	* src/login.c: Make sure a username is specified with -f.

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Existence of pam_user was already checked. pwd was
	already copied to pwent. Remove duplicated code.

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: check_flags() renamed process_flags(). All flag
	processing blocs moved to process_flags().

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/logoutd.c, src/userdel.c: Re-indent. This helps pmccabe.

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Add missing closing }. This was probably never
	noticed because UT_ADDR is never defined.
	* src/login.c: Re-indent.

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Do not mix USE_PAM and !USE_PAM code.

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Use failent_user to log to audit. username is the
	caller, not the user login tries to authenticate.
	* src/login.c: Use pwd->pw_name instead of pwd->pw_uid. This might
	be more precise (name must be unique, uid might not be).

2008-09-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.1.xml: passwd cannot change the full name of the
	user, the user's login shell; but it can change the account or
	password validity period. Thanks to Reuben Thomas.

2008-09-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Added missing declaration of Mflg.
	* src/pwck.c: Only unlock files if they were locked before (e.g.
	not in read-only mode).